third_party/blink/web_tests/external/wpt/worklets/idlharness.worker-expected.txt
This is a testharness.js-based test.
FAIL worklets interfaces promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1:
{"error": {"code"
^ Unrecognised tokens"
Harness: the test ran to completion.

